Now that nabar collapse is correct for mobile, return to a fixed navbar.

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -10,3 +10,7 @@
 .navbar {
   margin-bottom: 0px;
 }
+
+body { 
+  padding-top: 50px; 
+}
